--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/GrauxLabs/graux-docs.git"
   },
-  "author": "Samyakt",
+  "author": "Kaushal",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/GrauxLabs/graux-docs/issues"
